add support for nested queries